# Lean-CMake

./: PDF
TestProgram/UseCMakeTest_1/: Build.bat  CMakeLists.txt  Makefile  PDF for CMake  UseCMakeTest_1.cpp  readme.txt  stdafx.cpp
TestProgram/UseCMakeTest_1/MathFunctions/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  MathFunctions.lib  MathFunctions.vcxproj  MathFunctions.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  mysqrt.cpp  mysqrt.h
TestProgram/UseCMakeTest_1/MathFunctions/Debug/: MathFunctions.lib
TestProgram/UseCMakeTest_1/MathFunctions/MathFunctions.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  MathFunctions.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
dependence/: CMakeLists.txt  README.txt  build  cmake.bat  configure
dependence/CMake/: BuildConfigs.cmake  SimpleProject.cmake
dependence/include/NetLibs/: IMsgFilter.h  INetMsg.h  NetLibsData.h  NetLibsHeader.h  ServerAdapter.h  ServerConfig.h  SessionObject.h  SocketBuffer.h  SocketByte.h  SocketPacker.h  SocketStream.h  SocketStreamBE.h
dependence/include/curl/: curlbuild.h
dependence/include/libdcapi_cpp-32/: dcapi_cpp.h
dependence/include/pal/: tthread.h  ttypes.h
dependence/include/tapp/: tapp.h
dependence/include/tbus/: tbus.h  tbus_error.h
dependence/include/tdr/: tdr_XMLtags.h  tdr_ctypes_info.h  tdr_error.h  tdr_metalib_manage.h  tdr_types.h
dependence/lib/: libboost_chrono-vc100-mt-s-1_53.lib  libboost_chrono-vc100-mt-sgd-1_53.lib  libboost_date_time-vc100-mt-s-1_45.lib  libboost_date_time-vc100-mt-s-1_53.lib  libboost_date_time-vc100-mt-sgd-1_45.lib  libboost_date_time-vc100-mt-sgd-1_53.lib  libboost_filesystem-vc100-mt-s-1_45.lib  libboost_filesystem-vc100-mt-s-1_53.lib  libboost_system-vc100-mt-s-1_45.lib  libboost_system-vc100-mt-s-1_53.lib  libboost_system-vc100-mt-sgd-1_45.lib  libboost_system-vc100-mt-sgd-1_53.lib  libboost_thread-vc100-mt-s-1_45.lib  libboost_thread-vc100-mt-s-1_53.lib  libboost_thread-vc100-mt-sgd-1_45.lib  libboost_thread-vc100-mt-sgd-1_53.lib  vld.lib  vld_x64.lib
dependence/lib/Debug/: gmock.lib  gtest.lib  libcurl.lib  libjson.lib  lua.lib  zlib.lib
dependence/lib/RelWithDebInfo/: gmock.lib  gtest.lib  libcurl.lib  libjson.lib  lua.lib  zlib.lib
dependence/lib/Release/: gmock.lib  gtest.lib  lua.lib  luabind.lib  zlib.lib
dependence/lib/boost lib version/vc100 x64/: libboost_date_time-vc100-mt-s-1_45.lib  libboost_date_time-vc100-mt-sgd-1_45.lib  libboost_filesystem-vc100-mt-s-1_45.lib  libboost_system-vc100-mt-s-1_45.lib  libboost_system-vc100-mt-sgd-1_45.lib  libboost_thread-vc100-mt-s-1_45.lib  libboost_thread-vc100-mt-sgd-1_45.lib
dependence/src/gmock-1.4.0/gtest/: CMakeLists.txt
dependence/src/gmock-1.4.0/gtest/msvc/: gtest.vcproj
dependence/src/gmock-1.5.0/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters
dependence/src/gmock-1.5.0/gmock.dir/Debug/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  src_gmock-1.5.0.lastbuildstate
dependence/src/gmock-1.5.0/gmock.dir/RelWithDebInfo/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  (+1 more)
dependence/src/gmock-1.5.0/gtest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters
dependence/src/lua-5.1.4/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  lua.sln  lua.vcxproj  lua.vcxproj.filters
dependence/src/luabind-0.9.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  luabind.sln  luabind.vcxproj  luabind.vcxproj.filters
dependence/src/mysql-connector-c-6.0.2/: CMakeLists.txt
dependence/src/mysql-connector-c-6.0.2/libmysql/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  libmysql.vcxproj  libmysql.vcxproj.filters
dependence/src/zlib-1.2.8/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  zlib.sln  zlib.vcxproj  zlib.vcxproj.filters
(+107 files in other folders)
